fix(core): Make notfier close button visible (#8407)

--- a/app/scripts/modules/core/src/widgets/notifier/notifier.component.less
+++ b/app/scripts/modules/core/src/widgets/notifier/notifier.component.less
@@ -32,5 +32,6 @@
   & > button.close-notification {
     width: 20px;
     padding: 1px 5px;
+    color: var(--color-white);
   }
 }
